test_suite/tests/ui/borrow/struct_variant.stderr
error: #[serde(borrow)] may only be used on newtype variants
 --> $DIR/struct_variant.rs:7:10
  |
7 | #[derive(Deserialize)]
  |          ^^^^^^^^^^^

error: aborting due to previous error

